--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@ Travel within India can be covered for a limited number of young researchers.
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Event Schedule<br></h2>
-        <p>Final Schedule Coming Soon</p>
+        <p><h3>Will be updated soon.</h3></p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <!--<div class="container">
 
         <ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
           <li class="nav-item">
@@ -466,18 +466,18 @@ Travel within India can be covered for a limited number of young researchers.
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#day-4" role="tab" data-bs-toggle="tab">Day 4</a>
-          </li>
+          </li>-->
 <!--<li class="nav-item">
             <a class="nav-link" href="#day-5" role="tab" data-bs-toggle="tab">Day 5</a>
           </li> -->
-        </ul>
+        <!-- </ul>
 
         <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
 
-          <h3 class="sub-heading">Schedule of Speakers and Discussions</h3>
+          <h3 class="sub-heading">Schedule of Speakers and Discussions</h3> -->
 
           <!-- Schdule Day 1 -->
-          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
+         <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-1">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:30 AM</time></div>
@@ -553,10 +553,11 @@ Travel within India can be covered for a limited number of young researchers.
               </div>
             </div>
 
-          </div><!-- End Schdule Day 1 -->
+          </div> -->
+          <!-- End Schdule Day 1 -->
 
           <!-- Schdule Day 2 -->
-          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
+          <!-- <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
@@ -624,10 +625,11 @@ Travel within India can be covered for a limited number of young researchers.
               </div>
             </div>
 
-          </div><!-- End Schdule Day 2 -->
+          </div>-->
+          <!-- End Schdule Day 2 -->
 
           <!-- Schdule Day 3 -->
-          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
+          <!--<div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-3">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>10:00 AM</time></div>
@@ -695,9 +697,11 @@ Travel within India can be covered for a limited number of young researchers.
               </div>
             </div>
 
-          </div><!-- End Schdule Day 3 -->
+          </div> -->
+          
+          <!-- End Schdule Day 3 -->
           <!-- Schdule Day 4 -->
-          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
+          <!-- <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
 
             <div class="row schedule-item">
               <div class="col-md-2"><time>09:30 AM</time></div>
@@ -771,9 +775,10 @@ Travel within India can be covered for a limited number of young researchers.
                 <h4>Quo qui praesentium nesciunt <span>Willow Trantow</span></h4>
                 <p>Voluptatem et alias dolorum est aut sit enim neque veritatis.</p>
               </div>
-            </div>
+            </div> 
 
-          </div><!-- End Schdule Day 4 -->
+          </div> -->
+          <!-- End Schdule Day 4 -->
 
           <!-- Schdule Day 5 -->
          
