--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@ Travel within India can be covered for a limited number of young researchers.
               </p>
             </div>
           </div>
-          <center><b>For any queries please write email to - amaa@iucaa.in</b></center>
+          
+          <center>
+            <h3><a class="cta-btn" href="IUCAA-AI-ML-WS.pdf"><u>[Download Poster]</u></a></h3><br>
+            <b>For any queries please write email to - amaa@iucaa.in</b>
+            </center>
         </div>
       </div>
 
