--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
                 </ol>
                 Applications of the above AI techniques to various astronomical domains will be extensively covered. The domains will include, but not be limited to, cosmological simulations, galaxy morphology, spectral classification, Solar astronomy, gravitational waves and various aspects of time domain astronomy.
 
-The academic programme will consist of keynote and invited talks, shorter talks by young researchers, demo sessions and panel discussions.
+The academic programme will consist of keynote and invited talks, shorter talks by young researchers, demo sessions and panel discussions. 
+<br><b>Registration Deadline: 10 October 2024</b><br>
+
               </p>
                 
             </div>
@@ -1388,12 +1390,13 @@ Places you can visit in and around Pune can be found <a href="https://web.iucaa.
 
         </div>
 
-        <div class="row gy-4 mt-1">
+        <!--<div class="row gy-4 mt-1">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4230.459037646242!2d73.82268582519264!3d18.560669782540696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf45db40022d%3A0x1efcdd94c3239f51!2sThe%20Inter-University%20Centre%20for%20Astronomy%20and%20Astrophysics!5e1!3m2!1sen!2sin!4v1727246992123!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div><!-- End Google Maps -->
+          </div> -->
+          <!-- End Google Maps -->
 
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="400">
               <div class="row gy-4">
 
@@ -1423,7 +1426,8 @@ Places you can visit in and around Pune can be found <a href="https://web.iucaa.
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div> -->
+          <!-- End Contact Form -->
 
         </div>
 
