--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
         <h2 data-aos="fade-up" data-aos-delay="100" class="">AI/ ML APPLICATIONS IN<br><span>ASTRONOMY & ASTROPHYSICS</span></h2>
-        <p data-aos="fade-up" data-aos-delay="200">JANUARY 6 - 10, 2025, IUCAA INDIA</p>
+        <p data-aos="fade-up" data-aos-delay="200">JANUARY 6 - 10, 2025, IUCAA, INDIA</p>
         <!--<div data-aos="fade-up" data-aos-delay="300" class="">
           <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
         </div>-->
@@ -137,7 +137,7 @@ The academic programme will consist of keynote and invited talks, shorter talks 
                     <li> Arif Babul, University of Victoria, Co – Chair  </li>
                     <li> Ashish Mahabal, Caltech</li>
                     <li> Kanak Saha, IUCAA, Coordinator</li>
-                    <li> Ninan Sajeeth Philip, Aries4D and IUCAA</li>
+                    <li> Ninan Sajeeth Philip, Airis4D and IUCAA</li>
                     <li> Prateek Sharma, IISc</li>
                     <li> T. Sivarani, IIA</li>
                     <li> M. Vivek, IIA</li>
@@ -153,7 +153,7 @@ Travel within India can be covered for a limited number of young researchers.
           </div>
           
           <center>
-            <h3><a class="cta-btn" href="IUCAA-AI-ML-WS.pdf"><u>[Download Poster]</u></a></h3><br>
+            <h3><u><a href="IUCAA-AI-ML-WS.pdf">Download Poster [PDF]</a><br><br><a href="IUCAA-AI-ML-WS.jpg">Download Poster [JPG]</a></u></a></h3><br>
             <b>For any queries please write email to - amaa@iucaa.in</b>
             </center>
         </div>
