--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="http://web.iucaa.in:8080/iucaa/jsp/ws/AMAA/Registration.jsp">Register</a>
+      <a class="cta-btn d-none d-sm-block" href="Registration.html">Register</a>
 
     </div>
   </header>
@@ -167,7 +167,7 @@ Travel within India can be covered for a limited number of young researchers.
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Event Speakers<br></h2>
+        <h2>Invited Speakers<br></h2>
 
       </div><!-- End Section Title -->
 
