--- a/Registration.html
+++ b/Registration.html
@@ -86,7 +86,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/venue-info-bg.jpg);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/hero-bg.jpg);">
       <div class="container position-relative">
         <h1>Registration Page</h1>
         <p>
