--- a/Registration.html
+++ b/Registration.html
@@ -106,12 +106,26 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Starter Section</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Registration Form</h2>
+        <p style="text-align: left;"><b>
+          Instructions:
+        </b><br>
+        <ul style="text-align: left;">
+          <li>All those interested in participating in the workshop are required to submit this registration form.</li>
+          <li>An acknowledgment will be sent to you after you have submitted your form.</li>
+          <li>The deadline for submitting the completed registration form is <b>October 10, 2024.</b></li>
+          <li>Invitations to selected participants will be sent by <b>November 01, 2024.</b></li>
+          <li>For any workshop-related issues, including difficulties in submitting the form, please send an email to: <a href="mailto:amaa@iucaa.in" target="_blank">amaa[at]iucaa.in</a></li>
+        </ul></p>
+        <p style="text-align: left;"><b>Note: All * fields are mandatory. Please DO NOT use ' (single quote) or " (double quote) while filling the form.</b></p>
+        <hr>
+
+      
+      
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up">
-        <p>Use this page as a starter for your own custom pages.</p>
+        <p>[Add Data Here]</p>
       </div>
 
     </section><!-- /Starter Section Section -->
