--- a/index.html
+++ b/index.html
@@ -1535,11 +1535,11 @@ Places you can visit in and around Pune can be found <a href="https://web.iucaa.
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href="https://twitter.com/IUCAAstro"><i class="bi bi-twitter-x"></i></a>
-          <a href="https://www.facebook.com/iucaapune"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/iucaapune/"><i class="bi bi-instagram"></i></a>
-          <a href="https://in.linkedin.com/company/inter-university-centre-for-astronomy-and-astrophysics-pune-india"><i class="bi bi-linkedin"></i></a>
-        </div>
+          <a href="https://twitter.com/IUCAAstro" target="_blank"><i class="bi bi-twitter-x"></i></a>
+          <a href="https://www.facebook.com/iucaapune" target="_blank"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/iucaapune/" target="_blank"><i class="bi bi-instagram"></i></a>
+          <a href="https://in.linkedin.com/company/inter-university-centre-for-astronomy-and-astrophysics-pune-india" target="_blank"><i class="bi bi-linkedin"></i></a>
+        </div>  
 
       </div>
     </div>
