--- a/Registration.html
+++ b/Registration.html
@@ -134,96 +134,96 @@
 
   <footer id="footer" class="footer dark-background">
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-md-6 footer-about">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">TheEvent</span>
-            </a>
-            <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms of service</a></li>
-              <li><a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Hic solutasetp</h4>
-            <ul>
-              <li><a href="#">Molestiae accusamus iure</a></li>
-              <li><a href="#">Excepturi dignissimos</a></li>
-              <li><a href="#">Suscipit distinctio</a></li>
-              <li><a href="#">Dilecta</a></li>
-              <li><a href="#">Sit quas consectetur</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Nobis illum</h4>
-            <ul>
-              <li><a href="#">Ipsam</a></li>
-              <li><a href="#">Laudantium dolorum</a></li>
-              <li><a href="#">Dinera</a></li>
-              <li><a href="#">Trodelas</a></li>
-              <li><a href="#">Flexo</a></li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="copyright text-center">
-      <div class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
-
-        <div class="d-flex flex-column align-items-center align-items-lg-start">
-          <div>
-            © Copyright <strong><span>MyWebsite</span></strong>. All Rights Reserved
-          </div>
-          <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-          </div>
-        </div>
-
-        <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
-        </div>
-
-      </div>
-    </div>
-
-  </footer>
+    <!--  <div class="footer-top">
+       <div class="container">
+         <div class="row gy-4">
+           <div class="col-lg-4 col-md-6 footer-about">
+             <a href="index.html" class="logo d-flex align-items-center">
+               <span class="sitename">AI/ ML APPLICATIONS IN ASTRONOMY & ASTROPHYSICS</span>
+             </a>
+             <div class="footer-contact pt-3">
+               <p>IUCAA</p>
+               <p>Pune University, MH, India 411007</p>
+               <p class="mt-3"><strong>Phone:</strong> <span>+91 2025604100</span></p>
+               <p><strong>Email:</strong> <span>amaa@iucaa.in</span></p>
+             </div>
+           </div> -->
+ 
+          <!-- <div class="col-lg-2 col-md-3 footer-links">
+             <h4>Useful Links</h4>
+             <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">About us</a></li>
+               <li><a href="#">Services</a></li>
+               <li><a href="#">Terms of service</a></li>
+               <li><a href="#">Privacy policy</a></li>
+             </ul>
+           </div>
+ 
+           <div class="col-lg-2 col-md-3 footer-links">
+             <h4>Our Services</h4>
+             <ul>
+               <li><a href="#">Web Design</a></li>
+               <li><a href="#">Web Development</a></li>
+               <li><a href="#">Product Management</a></li>
+               <li><a href="#">Marketing</a></li>
+               <li><a href="#">Graphic Design</a></li>
+             </ul>
+           </div>
+ 
+           <div class="col-lg-2 col-md-3 footer-links">
+             <h4>Hic solutasetp</h4>
+             <ul>
+               <li><a href="#">Molestiae accusamus iure</a></li>
+               <li><a href="#">Excepturi dignissimos</a></li>
+               <li><a href="#">Suscipit distinctio</a></li>
+               <li><a href="#">Dilecta</a></li>
+               <li><a href="#">Sit quas consectetur</a></li>
+             </ul>
+           </div>
+ 
+           <div class="col-lg-2 col-md-3 footer-links">
+             <h4>Nobis illum</h4>
+             <ul>
+               <li><a href="#">Ipsam</a></li>
+               <li><a href="#">Laudantium dolorum</a></li>
+               <li><a href="#">Dinera</a></li>
+               <li><a href="#">Trodelas</a></li>
+               <li><a href="#">Flexo</a></li>
+             </ul>
+           </div>
+ 
+         </div>
+       </div>
+     </div> -->
+ 
+     <div class="copyright text-center">
+       <div class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
+ 
+         <div class="d-flex flex-column align-items-center align-items-lg-start">
+           <div>
+             © Copyright <strong><span><a href="https://www.iucaa.in/en/">IUCAA</a></span></strong>. All Rights Reserved
+           </div>
+           <div class="credits">
+             <!-- All the links in the footer should remain intact. -->
+             <!-- You can delete the links only if you purchased the pro version. -->
+             <!-- Licensing information: https://bootstrapmade.com/license/ -->
+             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
+             Template by <a href="https://bootstrapmade.com">Bootstrapmade</a> Designed by <a href="https://atharva.info/">Atharva Pathak</a>
+           </div>
+         </div>
+ 
+         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
+           <a href="https://twitter.com/IUCAAstro" target="_blank"><i class="bi bi-twitter-x"></i></a>
+           <a href="https://www.facebook.com/iucaapune" target="_blank"><i class="bi bi-facebook"></i></a>
+           <a href="https://www.instagram.com/iucaapune/" target="_blank"><i class="bi bi-instagram"></i></a>
+           <a href="https://in.linkedin.com/company/inter-university-centre-for-astronomy-and-astrophysics-pune-india" target="_blank"><i class="bi bi-linkedin"></i></a>
+         </div>
+ 
+       </div>
+     </div>
+ 
+   </footer>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
