--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ The academic programme will consist of keynote and invited talks, shorter talks 
             <div class="col-lg-6">
               <!-- <h3>When and Where</h3>
               <p><h3>IUCAA, Pune - India <br>Monday to Saturday &nbsp;&nbsp; JANUARY 6 - 11, 2025</h3> -->
-                <h3>Scientific Organising Committee:</h3>
+                <h3>Scientific Organising Committee</h3>
                   <ul>
                     <li> Ajit Kembhavi, IUCAA, Co – Chair</li>
                     <li> Arif Babul, University of Victoria, Co – Chair  </li>
@@ -144,7 +144,7 @@ The academic programme will consist of keynote and invited talks, shorter talks 
                     <li> M. Vivek, IIA</li>
                     <li> Yogesh Wadadekar, NCRA</li>
                   </ul>
-                  <b>Participation will be by invitation only. Please fill the registration form provided in the Registration section. There will be no registration fee for the meeting.</b>
+                  <b><font style="color: #C86529;"> Participation will be by invitation only. Please fill the registration form provided in the Register section. There will be no registration fee for the meeting.</b></font>
 <br>Local hospitality, including lodging and meals will be covered by the workshop as per IUCAA norms. 
 Accommodation for invited participants will be provided in the IUCAA guest house, or in neighboring guest houses.
 Travel within India can be covered for a limited number of young researchers.
